# Graphical-Resume

./: .gitignore  BC.html  Cargo.toml  README.md  build.rs  run.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
jules-scratch/verification/: verify.py
src/: lib.rs  renderer.rs  shader.fs.wgsl  shader.vs.wgsl  shader_fire.fs.wgsl  shader_ice.fs.wgsl
src/shaders/: fire.wgsl  gel.wgsl  vs.wgsl  waves.wgsl
www/: gallery.css  gallery.html  gallery.js  gallery.json  generate_pdf.py  index.html  index.js  pygame.py  resume.json
