[package]
name = "rendered-resume"
version = "0.1.0"
authors = ["Jules <agent@example.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.4"
env_logger = "0.10"
wgpu = { version = "0.19", features = ["webgpu", "webgl"] } # Use a non-yanked version
winit = "0.29"
bytemuck = { version = "1.12", features = ["derive"] }
glam = "0.24"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them to the browser's console.
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "MouseEvent",
]
